<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/member_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/coclorTitleBackGround"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mumber_text_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:ellipsize="marquee"
            android:gravity="center_horizontal|center"
            android:singleLine="true"
            android:text="@string/str_bar_chat_group_list"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />

        <Button
            android:id="@+id/member_chat_return"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:button="@drawable/selector_btn_title_back"
            android:gravity="center"
            android:text="@string/str_return"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <Button
            android:id="@+id/member_chat_info"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:button="@drawable/selector_btn_title_back"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/str_bar_chat_info"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />
    </RelativeLayout>

    <ListView
        android:id="@+id/member_show_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </ListView>
    
</LinearLayout>