<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/born_dialog_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/born_yr_layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_top_line1" >

            <TextView
                android:id="@+id/born_yr_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/str_born_yr"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/born_yr_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/born_yr_text"
                android:entries="@array/years"
                android:popupBackground="@color/colorWhite" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/born_mth_layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_top_line1" >

            <TextView
                android:id="@+id/born_mth_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/str_born_mth"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/born_mth_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/born_mth_text"
                android:entries="@array/month" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/born_day_layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_top_line1" >

            <TextView
                android:id="@+id/born_day_text"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/str_born_day"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/born_day_spinner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/born_day_text"
                android:entries="@array/day_thirty_one" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite" >

            <Button
                android:id="@+id/born_save_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/select_btn_color"
                android:text="@string/str_sure"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/born_cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/born_save_btn"
                android:background="@drawable/select_btn_exit_color"
                android:text="@string/str_cancle"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>


