<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/dm_rl_bg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/yuyin_voice_1">

        <TextView
            android:id="@+id/dm_tv_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_centerInParent="true"
            android:text="@string/str_recorder_notice_cancle"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/dm_rl_bg2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/yuyin_cancel"
        android:visibility="gone"
       >

        <TextView
            android:id="@+id/dm_tv_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/str_recorder_notice_cantsend"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
    </RelativeLayout>
    
      <RelativeLayout
        android:id="@+id/dm_rl_bg3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="gone"
        android:background="@drawable/yuyin_gantanhao"
       >

        <TextView
            android:id="@+id/dm_tv_txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:text="@string/str_recorder_too_short"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>
    </RelativeLayout>
</RelativeLayout>


